<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@drawable/background" >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.1"
        android:orientation="horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/guideline1"
        app:layout_constraintRight_toLeftOf="@id/lang_settings_spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="8dp"
        android:id="@+id/lang_settings_text"
        android:background="@drawable/key"
        android:textColor="#ffffff"
        android:text="@string/lang_settings_txt"
        android:padding="10dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/guideline1"
        app:layout_constraintLeft_toRightOf="@id/lang_settings_text"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="8dp"
        android:id="@+id/lang_settings_spinner"
        android:background="@drawable/spinner_bg"
        android:textColor="#ffffff"
        android:padding="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.3"
        android:orientation="horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintRight_toLeftOf="@id/hands_settings_box"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="8dp"
        android:id="@+id/hands_settings_text"
        android:background="@drawable/key"
        android:textColor="#ffffff"
        android:text="@string/hands_settings_txt"
        android:padding="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hands_settings_box"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/hands_settings_text" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintBottom_toTopOf="@+id/settings_training"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="8dp"
        android:id="@+id/quit_from_settings"
        android:textColor="#ffffff"
        android:background="@drawable/key"
        android:text="@string/quit_button_training"
        android:padding="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>