<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrainingActivity"
    android:keepScreenOn="true"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/fullscreen_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingLeft="20sp"
        android:maxLines="1"
        android:gravity="left"
        android:text="0/0"
        android:textColor="#33b5e5"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fullscreen_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:keepScreenOn="true"
        android:maxLines="1"
        android:paddingRight="20sp"
        android:text="0:00"
        android:textColor="#33b5e5"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:background="@drawable/rectangle"
        android:gravity="center"
        android:keepScreenOn="true"
        android:maxLines="1"
        android:text="@string/dummy_content"
        android:textColor="#33b5e5"
        android:textSize="70sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullscreen_score"
        app:layout_constraintVertical_bias="0.02" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/keyboard"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintVertical_bias="0.1" />

    <ImageView
        android:id="@+id/left_hand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageView
        android:id="@+id/right_hand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button_training"
        android:textColor="#FFFFFF"
        android:layout_margin="8dp"
        android:id="@+id/stop_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/key" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit_button_training"
        android:textColor="#FFFFFF"
        android:layout_margin="8dp"
        android:id="@+id/quit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/key" />

</androidx.constraintlayout.widget.ConstraintLayout>